--- a/gb/20/2/18/n11877862.md
+++ b/gb/20/2/18/n11877862.md
@@ -1,54 +1,61 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/rgtkqo2398/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/rgtkqo2398/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/rgtkqo2398/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/rgtkqo2398/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/rgtkqo2398/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/rgtkqo2398/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/rgtkqo2398/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/rgtkqo2398/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/rgtkqo2398/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/rgtkqo2398/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/rgtkqo2398/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/rgtkqo2398/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/rgtkqo2398/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/rgtkqo2398/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/rgtkqo2398/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/rgtkqo2398/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/rgtkqo2398/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/rgtkqo2398/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/rgtkqo2398/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/rgtkqo2398/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/rgtkqo2398/djy/blob/master/gb/nf6123.md#1">诉江</a> | <a target="_blank" href="https://github.com/rgtkqo2398/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/rgtkqo2398/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/rgtkqo2398/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/rgtkqo2398/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/rgtkqo2398/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/rgtkqo2398/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/rgtkqo2398/djy/blob/master/gb/nf5287.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/rgtkqo2398/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/rgtkqo2398/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://github.com/rgtkqo2398/djy/blob/master/gb/nf1235328.md#1">书籍</a> | <a target="_blank" href="https://github.com/rgtkqo2398/www/blob/master/README.md?zsrh#1">翻墙</a></p><p><a target="_blank" href="https://github.com/rgtkqo2398/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/rgtkqo2398/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/rgtkqo2398/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/rgtkqo2398/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/rgtkqo2398/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/rgtkqo2398/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/rgtkqo2398/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/rgtkqo2398/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/rgtkqo2398/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/rgtkqo2398/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/rgtkqo2398/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/rgtkqo2398/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/rgtkqo2398/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/rgtkqo2398/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/vuwsmg331/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/vuwsmg331/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/vuwsmg331/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/vuwsmg331/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/vuwsmg331/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/vuwsmg331/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/vuwsmg331/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/vuwsmg331/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/vuwsmg331/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/vuwsmg331/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/vuwsmg331/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/vuwsmg331/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/vuwsmg331/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/vuwsmg331/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/vuwsmg331/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/vuwsmg331/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/vuwsmg331/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/vuwsmg331/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/vuwsmg331/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/vuwsmg331/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/vuwsmg331/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/vuwsmg331/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/vuwsmg331/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/vuwsmg331/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/vuwsmg331/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/vuwsmg331/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/vuwsmg331/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/vuwsmg331/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/vuwsmg331/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/vuwsmg331/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/vuwsmg331/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/vuwsmg331/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/vuwsmg331/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/vuwsmg331/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/vuwsmg331/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/vuwsmg331/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/vuwsmg331/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/vuwsmg331/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/vuwsmg331/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/vuwsmg331/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/vuwsmg331/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/vuwsmg331/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/vuwsmg331/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/vuwsmg331/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/vuwsmg331/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/vuwsmg331/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/vuwsmg331/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>“充满希望” 航空公司经理观神韵感动深思</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/02/2002172356192124-600x400.jpg" />
 <h6>2020年2月17日晚，西南航空公司的技术自动化经理Lantze Frye和女友Angela Brown一起观看了神韵北美艺术团在美国俄克拉何马城（Oklahoma City）市政音乐厅（Civic Center Music Hall）的首场演出。（李辰／大纪元）
 </h6>
 <hr>
-	<p>【大纪元2020年02月18日讯】（大纪元记者李辰美国俄克拉何马城报导）“所有的节目都非常感人。”西南航空公司的技术自动化经理?Lantze Frye观看<a href="https://github.com/rgtkqo2398/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md">神韵</a>演出后说。</p>
-<p>2020年2月17日晚，Lantze Frye和女友Angela Brown一起观看了<a href="https://github.com/rgtkqo2398/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md">神韵</a>北美艺术团在美国俄克拉何马城（Oklahoma City）市政音乐厅（Civic Center Music Hall）的首场演出。他说，整场演出积极向上，令人充满<a href="https://github.com/rgtkqo2398/djy/blob/master/gb/tag/%E5%B8%8C%E6%9C%9B.md">希望</a>。</p>
+	<p>【大纪元2020年02月18日讯】（大纪元记者李辰美国俄克拉何马城报导）“所有的节目都非常感人。”西南航空公司的技术自动化经理?Lantze Frye观看<ahref="https://github.com/vuwsmg331/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>演出后说。</p>
+<p>2020年2月17日晚，Lantze Frye和女友Angela Brown一起观看了<ahref="https://github.com/vuwsmg331/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>北美艺术团在美国俄克拉何马城（Oklahoma City）市政音乐厅（Civic Center Music Hall）的首场演出。他说，整场演出积极向上，令人充满<ahref="https://github.com/vuwsmg331/djy/blob/master/gb/tag/%E5%B8%8C%E6%9C%9B.md#1">希望</a>。</p>
 <p>“演出扣人心弦，编舞非常成功。”Frye说，“这是一个领略其它文化和传统的机会。”</p>
-<p>Frye表示，神韵所传递的信息鼓舞人心，令人获得启迪，“演出令人对未来充满了<a href="https://github.com/rgtkqo2398/djy/blob/master/gb/tag/%E5%B8%8C%E6%9C%9B.md">希望</a>。”“我从演出中学到了太多的东西，而且演出也让我反思很多事情。”</p>
+<p>Frye表示，神韵所传递的信息鼓舞人心，令人获得启迪，“演出令人对未来充满了<ahref="https://github.com/vuwsmg331/djy/blob/master/gb/tag/%E5%B8%8C%E6%9C%9B.md#1">希望</a>。”“我从演出中学到了太多的东西，而且演出也让我反思很多事情。”</p>
 <p>他提到最后一个节目震撼人心，他从中理解到“现代人接纳了古老的传统，回归传统。”</p>
-<p>一起前来观看演出的女友Angela Brown也惊喜表示，演出的节目远超她的预期，“非常美好。我原本不知道会看到什么，但是（观看后发现）演出的色彩温暖明亮，<a href="https://github.com/rgtkqo2398/djy/blob/master/gb/tag/%E8%88%9E%E8%B9%88.md">舞蹈</a>好得令人赞叹。”</p>
+<p>一起前来观看演出的女友Angela Brown也惊喜表示，演出的节目远超她的预期，“非常美好。我原本不知道会看到什么，但是（观看后发现）演出的色彩温暖明亮，<ahref="https://github.com/vuwsmg331/djy/blob/master/gb/tag/%E8%88%9E%E8%B9%88.md#1">舞蹈</a>好得令人赞叹。”</p>
 <p>她说，演出具有深厚的精神内涵，令她深思，“ 演出的最后，让你开始思考你以前不曾思考的东西。 ”</p>
 <p>责任编辑：王愉悦</p>
 	
 <hr>
 
-#### 本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://git.io/JesJV">翻墙软件</a>才能访问）
-> 原文：<a href="https://www.epochtimes.com/gb/20/2/18/n11877862.htm">“充满希望” 航空公司经理观神韵感动深思</a>
 
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>相关新闻：
-> <li><a href="https://www.epochtimes.com/gb/20/1/16/n11798917.htm">武汉肺炎无法排除人传人 美国务院警告防疫</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/16/n11798666.htm">武汉新冠状病毒再增死亡病例 网民冒险爆料</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/16/n11798091.htm">日本现首例武汉肺炎 机场加强防疫</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/16/n11796789.htm">港卫生防护中心：武汉肺炎一患者 未涉足街市 疑人传人</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/15/n11795520.htm">新型冠状病毒 近距离接触恐人传人</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/15/n11793955.htm">武汉肺炎疑现人传人 夫妻先后发病</a></li>
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>热门新闻：
-> <li><a href="https://www.epochtimes.com/gb/20/1/17/n11801312.htm">【更新】肺炎死亡惊人 武汉日烧百具死尸</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/8/n11853323.htm">【独家】一天烧百具尸体 殡仪馆员怒斥狗官</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/7/n11852540.htm">政治局常委会要求落空 新医学专家否定老专家</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/8/n11854313.htm">湖北省高层异动 习近平开始“动刀子”？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/6/n11849036.htm">【历史上的瘟疫】被瘟疫摧毁的强大雅典</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/29/n11828782.htm">250岁的隐士 娓娓道出前朝旧事</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/30/n11833429.htm">乌鸦满天飞 预兆什么灾？如何消解？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/1/n11836330.htm">孝女感动神仙  孝心精诚穿越时空得护祐</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/7/n11852868.htm">李文亮去世 中共舆情分析报告网络曝光</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/7/n11851944.htm">陈秋实武汉失联 疑遭强制隔离 母亲求救</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/7/n11850310.htm">【疫情最前线】武汉实验室抢专利不慎泄密</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/7/n11850690.htm">【十字路口】李文亮病逝 武汉肺炎致七大危机</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/7/n11852281.htm">【罗厨寻味】年菜系列之六：煎酿鲈鱼</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/6/n11850022.htm">【胡乃文开讲】抗武汉肺炎 提升免疫力是关键！中医防疫3招</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/7/n11852148.htm">悼预警武汉肺炎医生 章子怡怒斥警方“耻辱”</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/6/n11849645.htm">痛斥林郑限制佩戴口罩 关淑怡：施政似武则天</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/7/n11852799.htm">小区现新冠病毒患者 陈浩明一家六口宅在家</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/7/n11852560.htm">被疑撑香港医护罢工 郭富城声明账号被盗用</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/6/n11850031.htm">儿子滑雪意外受伤 袁咏仪：这个年过得不容易</a></li>
+<strong>相关新闻：</strong>
+<li><a href="https://github.com/vuwsmg331/djy/blob/master/gb/20/2/13/n11866507.md#1">“信仰坚定者得护佑”公司经理观神韵获启迪</a></li>
+<li><a href="https://github.com/vuwsmg331/djy/blob/master/gb/20/2/13/n11866757.md#1">公司总裁观神韵震撼“法轮功节目最感人”</a></li>
+<li><a href="https://github.com/vuwsmg331/djy/blob/master/gb/20/2/16/n11872532.md#1">神性内涵启迪人心 建筑师赞神韵实至名归</a></li>
+<li><a href="https://github.com/vuwsmg331/djy/blob/master/gb/20/2/16/n11873076.md#1">神韵演出“将世界相连” 麦克艾伦观众赞佩</a></li>
+<li><a href="https://github.com/vuwsmg331/djy/blob/master/gb/20/2/16/n11873333.md#1">“最高水准的演出” 前演员赞神韵如诗</a></li>
+<li><a href="https://github.com/vuwsmg331/djy/blob/master/gb/20/2/16/n11873411.md#1">黄金珠宝商观神韵：好得令人难以置信</a></li>
 <hr>
 
-#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/rgtkqo2398/djy/blob/master/gb/20/2/18/n11877862.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/rgtkqo2398/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgtkqo2398/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/rgtkqo2398/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/rgtkqo2398/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/rgtkqo2398/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgtkqo2398/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/rgtkqo2398/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgtkqo2398/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/rgtkqo2398/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgtkqo2398/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/rgtkqo2398/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgtkqo2398/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/rgtkqo2398/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgtkqo2398/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/rgtkqo2398/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgtkqo2398/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/rgtkqo2398/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgtkqo2398/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/rgtkqo2398/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgtkqo2398/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/rgtkqo2398/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgtkqo2398/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/rgtkqo2398/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgtkqo2398/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/rgtkqo2398/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgtkqo2398/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/rgtkqo2398/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgtkqo2398/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/rgtkqo2398/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgtkqo2398/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/rgtkqo2398/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgtkqo2398/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/rgtkqo2398/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgtkqo2398/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/rgtkqo2398/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgtkqo2398/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/rgtkqo2398/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgtkqo2398/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/rgtkqo2398/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgtkqo2398/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/rgtkqo2398/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgtkqo2398/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/rgtkqo2398/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgtkqo2398/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/rgtkqo2398/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgtkqo2398/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/rgtkqo2398/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgtkqo2398/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+
+<strong>编辑推荐：</strong>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/18/n11120824.md#1" target="_blank">共产暴政录：5.12汶川地震后 中共嫁祸法轮功</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/19/n11266537.md#1" target="_blank">聋哑人能说话 瘫痪人迈双腿 亲历者忆神迹</a></li>
+<hr>
+
+<strong>热门新闻：</strong>
+<li><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/16/n13238162.md#1">美国男子自称遭外星人多次绑架和植入晶片</a></li>
+<li><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/10/n13225261.md#1">【未解之谜】轰动日本 甲府UFO事件</a></li>
+<li><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/15/n13237143.md#1">【百年真相】最惨海归博士 萧光琰文革遭灭门</a></li>
+<li><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/6/n13213473.md#1">古今两个中秋礼俗各异 古代不送月饼 月饼何时普及？</a></li>
+<li><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/14/n13233994.md#1">【未解之谜】前世情未了 今生续前缘</a></li>
+<li><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/19/n13245201.md#1">【马克时空】澳洲改买美核潜艇 维吉尼亚级核潜艇有多牛</a></li>
+<li><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/18/n13244249.md#1">【横河观点】世界为何对中共移植黑幕沉默？</a></li>
+<li><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/18/n13243637.md#1">【十字路口】北京内乱加速 美英澳联盟四大趋势</a></li>
+<li><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/18/n13242870.md#1">消息：李嘉诚再次出售大陆地产项目</a></li>
+<li><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/17/n13240636.md#1">中共何以令一位精英人士流亡美国（1）</a></li>
+<li><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/18/n13242696.md#1">研究：降低蛋白质出错有助延长寿命</a></li>
+<li><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/16/n13239594.md#1">周星驰为何不再演戏？徐峥王晶析背后原因</a></li>
+<li><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/16/n13239828.md#1">张哲瀚事件后 朱一龙亦因旧照遭小粉红狂轰</a></li>
+<li><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/17/n13242350.md#1">范冰冰40岁生日 罕见晒与家人合照</a></li>
+<li><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/17/n13242592.md#1">杨紫琼晒《尚气》花絮照 大赞梁朝伟和元华</a></li>
+<li><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/17/n13241083.md#1">龙劭华灵堂开放亲友吊唁 9月22日办告别式</a></li>
+<li><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/17/n13242154.md#1">维生素D有4大抗癌功效 补D防癌注意1关键</a></li>
+<li><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/17/n13240906.md#1">大陆女子藉网路摄影机 目击英国尼斯湖水怪</a></li>
+<li><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/17/n13242435.md#1">以色列：打疫苗突破感染风险 是自然感染13倍</a></li>
+<li><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/17/n13240582.md#1">爱尔兰男子离职 最后薪资竟是30公斤重硬币</a></li>
+<li><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/19/n13244539.md#1">巨型石斑鱼一口咬下鲨鱼 美国船长看傻眼</a></li>
+<hr>
+
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/vuwsmg331/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/vuwsmg331/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/2/18/n11877862.htm">“充满希望” 航空公司经理观神韵感动深思</a></p><hr>
+
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/vuwsmg331/djy/blob/master/gb/20/2/18/n11877862.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/vuwsmg331/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vuwsmg331/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/vuwsmg331/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/vuwsmg331/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/vuwsmg331/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vuwsmg331/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/vuwsmg331/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vuwsmg331/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/vuwsmg331/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vuwsmg331/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/vuwsmg331/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vuwsmg331/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/vuwsmg331/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vuwsmg331/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/vuwsmg331/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vuwsmg331/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/vuwsmg331/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vuwsmg331/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/vuwsmg331/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vuwsmg331/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/vuwsmg331/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vuwsmg331/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/vuwsmg331/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vuwsmg331/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/vuwsmg331/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vuwsmg331/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/vuwsmg331/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vuwsmg331/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/vuwsmg331/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vuwsmg331/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/vuwsmg331/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vuwsmg331/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/vuwsmg331/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vuwsmg331/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/vuwsmg331/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vuwsmg331/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/vuwsmg331/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vuwsmg331/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/vuwsmg331/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vuwsmg331/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/vuwsmg331/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vuwsmg331/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/vuwsmg331/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vuwsmg331/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/vuwsmg331/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vuwsmg331/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/vuwsmg331/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vuwsmg331/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
